<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>nl.detestbaas</groupId>
    <artifactId>playwright-annotations</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>Find Playwright elements using a LocateBy annotation</description>
    <url>https://github.com/detestbaas/playwright-annotations</url>

    <developers>
        <developer>
            <organization>De Testbaas</organization>
            <organizationUrl>https://detestbaas.nl</organizationUrl>
            <name>Marco Maes</name>
            <email>marco.maes@detestbaas.nl</email>
            <roles>
                <role>Owner</role>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <organization>Polteq</organization>
            <organizationUrl>https://www.polteq.com</organizationUrl>
            <name>Jeroen Mengerink</name>
            <email>jeroen.mengerink@polteq.com</email>
            <roles>
                <role>Contributor</role>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/detestbaas/playwright-annotations.git</connection>
        <developerConnection>scm:git:ssh://github.com/detestbaas/playwright-annotations.git</developerConnection>
        <url>https://github.com/detestbaas/playwright-annotations/tree/main</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub OWNER Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/detestbaas/playwright-annotations</url>
        </repository>
    </distributionManagement>

    <properties>
        <playwright.version>1.41.2</playwright.version>

        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>

        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <project.encoding>UTF-8</project.encoding>
        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.microsoft.playwright</groupId>
            <artifactId>playwright</artifactId>
            <version>${playwright.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        --enable-preview
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>